--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,19 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.winton.bottomnavigationview.MainActivity">
+    tools:context="com.winton.app.MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
     <com.winton.bottomnavigationview.NavigationView
+        app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/nv"
         app:iconSize="25dp"
         app:activeTextColor="@color/colorPrimary"
