--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,30 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.winton.app.MainActivity">
+    >
 
     <TextView
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center_horizontal"
         android:id="@+id/tv_select"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+         />
 
 
     <com.winton.bottomnavigationview.NavigationView
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:id="@+id/nv"
+    android:layout_marginTop="20dp"
+    android:id="@+id/nv"
+    android:background="@android:color/white"
+    app:activeTextColor="@android:color/black"
+    app:unactiveTextColor="#666666"
+    android:layout_width="match_parent"
+    android:layout_height="60dp">
+    </com.winton.bottomnavigationview.NavigationView>
+
+    <com.winton.bottomnavigationview.NavigationView
+        android:layout_marginTop="100dp"
         android:background="@android:color/white"
         app:activeTextColor="@android:color/black"
+        android:id="@+id/nv2"
+        app:showLine ="false"
         app:unactiveTextColor="#666666"
         android:layout_width="match_parent"
         android:layout_height="60dp">
-
     </com.winton.bottomnavigationview.NavigationView>
 
-</android.support.constraint.ConstraintLayout>
+    <com.winton.bottomnavigationview.NavigationView
+        android:layout_marginTop="100dp"
+        android:background="@android:color/white"
+        app:activeTextColor="@android:color/black"
+        android:id="@+id/nv3"
+        app:lineColor ="#000000"
+        app:unactiveTextColor="#666666"
+        android:layout_width="match_parent"
+        android:layout_height="60dp">
+    </com.winton.bottomnavigationview.NavigationView>
+
+</LinearLayout>
